[tool.poetry]
authors = ["Alex Viscreanu <alexandru.viscreanu@kiwi.com>"]
description = "A smart service catalogue providing an overview of your services"
license = "MIT"
name = "zoo"
version = "1.4.5"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__

  # All of the above are the default values for black exclude. Specify custom bellow.
  | test\/.*\/snapshots\/*
  | .pre-commit-cache/*
)/
'''

[tool.isort]
# config compatible with Black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["zoo"]

[tool.poetry.dependencies]
python = "^3.8"

arrow = "^0.16.0"  # breaking changes, needs proper review
attrs = ">=20.3.0"
boto3 = ">=1.16.63"
botocore = ">=1.19.63"
cachetools = ">=4.2.1"
celery = ">=4.4.7"
celery-redbeat = ">=1.0.0"
certifi = ">=2020.12.5"
colorama = ">=0.4.4"
datadog = ">=0.39.0"
ddtrace = ">=0.41.2"
Deprecated = ">=1.2.11"
django = "^2.2.18" # breaking changes, needs proper review
django-debug-toolbar = ">=2.2"
django-environ = ">=0.4.5"
django-extensions = ">=3.1.0"
django-silk = ">=4.1.0"
django-stronghold = ">=0.4.0"
djangoql = ">=0.14.3"
dockerfile-parse = ">=1.1.0"
docutils = ">=0.16"
gevent = ">=21.1.2"
google-api-core = ">=1.25.1"
google-api-python-client = ">=1.12.8"
google-auth = ">=1.24.0"
graphene = ">=2.1.8"
graphene-django = ">=2.15.0"
greenlet = ">=1.0.0"
gunicorn = {version = ">=20.0.4", extras = ["gevent"]}
hiredis = ">=1.1.0"
ipython = ">=7.18.1"
jedi = ">=0.18.0"
Jinja2 = ">=2.11.3"
kubernetes = ">=11.0.0"
markdown = ">=3.2.2"
Markdown = ">=3.3.3"
meilisearch = ">=0.12.4"
openapi-spec-validator = ">=0.2.9"
parso = ">=0.8.1"
prance = ">=0.19.0"
prompt-toolkit = ">=3.0.14"
protobuf = ">=3.14.0"
psycopg2-binary = ">=2.8.6"
ptyprocess = ">=0.7.0"
pygerduty = ">=0.38.3"
pygithub = ">=1.53"
Pygments = ">=2.7.4"
python-gitlab = ">=2.6.0"
pytz = ">=2021.1"
pyyaml = ">=5.3.1"
PyYAML = ">=5.4.1"
redis = ">=3.5.3"
requests = ">=2.25.1"
requirements-parser = ">=0.2.0"
rsa = ">=4.7"
s3transfer = ">=0.3.4"
semver = ">=2.13.0"
sentry-sdk = ">=0.17.8"
slacker = ">=0.14.0"
sortedcontainers = ">=2.3.0"
sqlparse = ">=0.4.1"
structlog = ">=20.2.0"
tenacity = ">=6.3.1"
toml = ">=0.10.2"
traitlets = ">=5.0.5"
urllib3 = ">=1.26.3"
whitenoise = {version = ">=5.2.0", extras = ["brotli"]}
wrapt = ">=1.12.1"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
coverage = ">=5.3"
fakeredis = ">=1.4.3"
httpretty = ">=1.0.2"
isort = ">=5.7.0"
mypy = ">=0.800"
pre-commit = ">=2.10.0"
pylint = ">=2.6.0"
pytest = ">=6.0.2"
pytest-cov = ">=2.10.1"
pytest-django = ">=3.10.0"
pytest-env = ">=0.6.2"
pytest-factoryboy = ">=2.0.3"
pytest-freezegun = ">=0.4.2"
pytest-mock = ">=3.3.1"
pytest-xdist = ">=2.1.0"
snapshottest = ">=0.5.1"
sphinx = ">=3.2.1"
sphinx-rtd-theme = ">=0.5.0"
"testing.postgresql" = ">=1.3.0"
tox = ">=3.21.2"
tox-docker = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
